--- a/m2_layout/app/src/main/res/values/strings.xml
+++ b/m2_layout/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">hw2</string>
+    <string name="top_text">верхняя строчка, настроенная из кода</string>
+    <string name="bottom_text">нижняя строчка, настроенная из кода</string>
+    <string name="defaultTopString">Верхняя строчка</string>
+    <string name="defaultBottomString">Нижняя строчка</string>
 </resources>
