--- a/m8_quiz_animation/quizApp/app/src/main/res/values/strings.xml
+++ b/m8_quiz_animation/quizApp/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="btn_text_back_to_welcome">Назад</string>
     <string name="bnt_text_go_to_result">Отправить</string>
     <string name="restart_btn_text">Начать заново</string>
+    <string name="text_Title_Result_Fragment">Ваши результаты:</string>
 </resources>
