--- a/m9_quiz_localization/quizApp/app/src/main/res/values/strings.xml
+++ b/m9_quiz_localization/quizApp/app/src/main/res/values/strings.xml
@@ -1,15 +1,23 @@
 <resources>
     <string name="app_name">Know_everything</string>
     <string name="welcome_picture_name">Welcome_picture_name</string>
-    <string name="button_continue">Продолжить</string>
-    <string name="button_start">Начать</string>
+    <string name="button_continue">Continue</string>
+    <string name="button_start">Start</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="welcome_text">Приветствую в игре Know Everyting!</string>
+    <string name="welcome_text">Welcome to Know Everything!</string>
 
-    <string name="btn_text_back_to_welcome">Назад</string>
-    <string name="bnt_text_go_to_result">Отправить</string>
-    <string name="restart_btn_text">Начать заново</string>
-    <string name="text_Title_Result_Fragment">Ваши результаты:</string>
-    <string name="open_dateBirth_picker">Выберите дату рождения</string>
+    <string name="btn_text_back_to_welcome">Back</string>
+    <string name="bnt_text_go_to_result">Send</string>
+    <string name="restart_btn_text">Start over</string>
+    <string name="text_Title_Result_Fragment">Your results:</string>
+    <string name="open_dateBirth_picker">Choose your date of birth</string>
+    <string name="first_question">First question: </string>
+    <string name="second_question">Second question: </string>
+    <string name="third_question">Third question: </string>
+
+    <string name="survey_results">Survey results: </string>
+    <string name="answer">Answer: </string>
+    <string name="feedback">Feedback: </string>
+
 </resources>
