--- a/m11_timer_data_storage/App/app/src/main/res/values/strings.xml
+++ b/m11_timer_data_storage/App/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">hw11</string>
+    <string name="EditText_text">Введите текст</string>
+    <string name="ClearButton_text">Очистить</string>
+    <string name="save_data_button_text">Сохранить</string>
 </resources>
