--- a/m14_retrofit/app/src/main/res/values/strings.xml
+++ b/m14_retrofit/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">myApp14</string>
+    <string name="update">Обновить</string>
+    <string name="reload">Перезагрузить</string>
+    <string name="user_picture">User Picture</string>
 </resources>
