--- a/m19_location/app/src/main/res/values/strings.xml
+++ b/m19_location/app/src/main/res/values/strings.xml
@@ -3,4 +3,10 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="Error">Ошбика</string>
+    <string name="PhotoSave">Фото сохранено успешно!</string>
+    <string name="required_permissions">Требуемые разрешения не получены</string>
+    <string name="ask_turn_GPS_network">Включить GPS?</string>
+    <string name="open_location_settings">Включить</string>
+    <string name="Cancel">Выход</string>
+    <string name="floating_action_button">floating action button</string>
 </resources>
